Ajuste no fluxo de pagamento
