# api--order/src/main/java/com/shoesclick/api/order/mapper/OrderMapper.java
@@ -5,8 +5,10 @@ import com.shoesclick.api.order.entity.Order;
 import com.shoesclick.api.order.entity.Status;
 import com.shoesclick.api.order.openapi.model.domain.OrderRequest;
 import com.shoesclick.api.order.openapi.model.domain.OrderResponse;
+import com.shoesclick.api.order.openapi.model.domain.OrderStatusRequest;
 import com.shoesclick.api.order.openapi.model.domain.StatusResponse;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
 
 import java.util.List;
@@ -21,11 +23,16 @@ public interface OrderMapper {
 
     List<OrderResponse> map(List<Order> orderList);
 
+    StatusResponse map(Status response);
+
     default PaymentDomain mapPayment(String paymentType, Map<String, Object> payParams){
         return new PaymentDomain()
                 .setPaymentType(paymentType)
                 .setPaymentParams(payParams);
     }
 
-    StatusResponse map(Status response);
+    @Mapping(target = "status", source = "request.status")
+    @Mapping(target = "id", source = "id")
+    Order map(Long id, OrderStatusRequest request);
+
 }
