# api--order/src/main/resources/apidocs.yaml
@@ -40,8 +40,7 @@ paths:
           description: SUCESSO
       operationId: listByCustomer
     parameters:
-      -
-        name: idCustomer
+      - name: idCustomer
         description: Identificador do Cliente
         schema:
           type: number
@@ -64,8 +63,35 @@ paths:
       summary: Obtem o Pedido pelo Id
       description: Obtem o Pedido pelo Id
     parameters:
-      -
-        name: id
+      - name: id
+        description: Identificador do elemento
+        schema:
+          type: number
+        in: path
+        required: true
+  '/api/order/{id}/status':
+    summary: Obtem o Pedido pelo Id
+    description: Atualiza o Status do Pedido
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderStatusRequest'
+      tags:
+        - Order
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatusResponse'
+          description: SUCESSO
+      operationId: updateStatus
+      summary: Obtem o Pedido pelo Id
+      description: Obtem o Pedido pelo Id
+    parameters:
+      - name: id
         description: Identificador do elemento
         schema:
           type: number
@@ -110,10 +136,8 @@ components:
         paymentParams:
           keyCode: '1231232132131212312312312312312123'
         orderItems:
-          -
-            idProduct: 1
-          -
-            idProduct: 3
+          - idProduct: 1
+          - idProduct: 3
     OrderItemRequest:
       title: Root Type for OrderItemRequest
       description: ''
@@ -200,7 +224,15 @@ components:
         paymentParams:
           keyCode: '1231232132131212312312312312312123'
         orderItems:
-          -
-            idProduct: 1
-          -
-            idProduct: 3
+          - idProduct: 1
+          - idProduct: 3
+    OrderStatusRequest:
+      title: Root Type for OrderStatusRequest
+      description: ''
+      type: object
+      properties:
+        status:
+          format: int32
+          type: integer
+      example:
+        status: 1
